Cleanup, new features, and better backend - Failed encryptions no longer create empty files - Preparedness tests in CryptoUtils no longer leave outputFile 	behind - Addition of an Log window (ErrorWindow). Themed to match - Added icon support to program. (All windows) - Deleted unnecessary size restrictions from fileWidget. - Removed redundant line from StyleSheet.css - Added 4 icons of various sizes to represent the program.

--- a/src/main/resources/css/StyleSheet.css
+++ b/src/main/resources/css/StyleSheet.css
@@ -75,7 +75,6 @@
 }
 #fileWindow {
     -fx-border-color: whitesmoke;
-    -fx-border-color: whitesmoke;
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
 }
